Align items fixed, hover animation in cards

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,13 @@ body,html{
     transition: transform linear 0.2s;
 }
 
+.card-ease{
+    transition: all linear 0.2s;
+}
+
+.guide-card-prague:hover,.guide-card-new-york:hover,.guide-card-paris:hover,.guide-card-barcelona:hover, .card-ease:hover{
+    transform: translateY(-5px);
+}
 .heart-icon{
     font-size: 26px; 
     color: rgb(224, 223, 223); 
@@ -70,6 +77,7 @@ body,html{
     border-radius: 1.5rem;
     padding: 10px;
 }
+
 .fs-7{
     font-size: 12px;
 }
@@ -84,9 +92,7 @@ body,html{
     opacity: 0.7;
     background-color: rgba(0,0,0,0.7);
 }
-.guide-card-prague:hover,.guide-card-new-york:hover,.guide-card-paris:hover,.guide-card-barcelona:hover{
-    transform: translateY(-5px);
-}
+
 div.slideMeJumbo{
     background-image: url(../images/travel1.jpg);
     background-position: center;
